--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
     box-sizing: border-box;
 }
 body{
-    background-color: aquamarine;
+    background-color: yellowgreen;
 }
 h1{
     color: blue;
-    text-align: center;
+    text-align: left;
 }
